; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/extr_ptw32_mutex_check_need_init.c_ptw32_mutex_check_need_init.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/extr_ptw32_mutex_check_need_init.c_ptw32_mutex_check_need_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ptw32_mutex_test_init_lock = common dso_local global i32 0, align 4
@PTHREAD_MUTEX_INITIALIZER = common dso_local global i32* null, align 8
@PTHREAD_RECURSIVE_MUTEX_INITIALIZER = common dso_local global i32* null, align 8
@ptw32_recursive_mutexattr = common dso_local global i32 0, align 4
@PTHREAD_ERRORCHECK_MUTEX_INITIALIZER = common dso_local global i32* null, align 8
@ptw32_errorcheck_mutexattr = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ptw32_mutex_check_need_init(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = call i32 @ptw32_mcs_lock_acquire(i32* @ptw32_mutex_test_init_lock, i32* %5)
  %7 = load i32**, i32*** %2, align 8
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** @PTHREAD_MUTEX_INITIALIZER, align 8
  %11 = icmp eq i32* %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32**, i32*** %2, align 8
  %14 = call i32 @pthread_mutex_init(i32** %13, i32* null)
  store i32 %14, i32* %3, align 4
  br label %37

15:                                               ; preds = %1
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** @PTHREAD_RECURSIVE_MUTEX_INITIALIZER, align 8
  %18 = icmp eq i32* %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32**, i32*** %2, align 8
  %21 = call i32 @pthread_mutex_init(i32** %20, i32* @ptw32_recursive_mutexattr)
  store i32 %21, i32* %3, align 4
  br label %36

22:                                               ; preds = %15
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** @PTHREAD_ERRORCHECK_MUTEX_INITIALIZER, align 8
  %25 = icmp eq i32* %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %22
  %27 = load i32**, i32*** %2, align 8
  %28 = call i32 @pthread_mutex_init(i32** %27, i32* @ptw32_errorcheck_mutexattr)
  store i32 %28, i32* %3, align 4
  br label %35

29:                                               ; preds = %22
  %30 = load i32*, i32** %4, align 8
  %31 = icmp eq i32* %30, null
  br i1 %31, label %32, label %34

32:                                               ; preds = %29
  %33 = load i32, i32* @EINVAL, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %32, %29
  br label %35

35:                                               ; preds = %34, %26
  br label %36

36:                                               ; preds = %35, %19
  br label %37

37:                                               ; preds = %36, %12
  %38 = call i32 @ptw32_mcs_lock_release(i32* %5)
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @ptw32_mcs_lock_acquire(i32*, i32*) #1

declare dso_local i32 @pthread_mutex_init(i32**, i32*) #1

declare dso_local i32 @ptw32_mcs_lock_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
